Updated toggle width and design

--- a/contact.html
+++ b/contact.html
@@ -129,37 +129,39 @@
     <div class="absolute lg:-rotate-6 h-[120%] w-[110%] bg-[#FFF7ED] lg:rounded-tl-[300px] -z-10 lg:-left-10 lg:top-14"></div>
 
     <!-- Main Content -->
-    <div class="container mx-auto">
-      <div class="flex items-center py-16 flex-col-reverse md:flex-row px-4 justify-around md:mt-16">
+      <div class="container mx-auto">
+        <div class="flex items-center py-16 flex-col-reverse md:flex-row px-4 justify-around md:mt-16">
         
-      <!-- Left Text Content -->
-      <div class="mt-4 text-center md:text-left">
-        <p class="font-bold text-[28px] md:text-[40px] mb-20">
-          We’re eager to hear from you.
-        </p>
+          <!-- Left Text Content -->
+          <div class="mt-4 text-center md:text-left">
+            <p class="font-bold text-[40px] mb-20">
+              We’re eager to hear from you.</p>
+            </p>
 
-        <!-- Email -->
-        <div class="border-b border-solid border-gray-200 pb-8 mb-8 max-w-fit mx-auto md:mx-0">
-          <p class="text-[20px] md:text-[22px]">Send us an email</p>
-          <p class="text-primary text-orange-400 font-bold text-[26px] md:text-[30px]">
-            <a href="mailto:support@uzoussd.com">support@uzoussd.com</a>
-          </p>
+            <!-- Email -->
+            <div class="border-b border-solid border-gray-200 pb-8 mb-8 max-w-fit mx-auto md:mx-0">
+              <p class="text-[20px] md:text-[22px]">Send us an email</p>
+              <p class="text-primary text-orange-400 font-bold text-[26px] md:text-[30px]">
+                <a href="mailto:support@uzoussd.com">support@uzoussd.com</a>
+              </p>
+              </div>
+
+            <!-- Call -->
+            <div class="max-w-fit mx-auto md:mx-0">
+              <p class="text-[20px] md:text-[22px]">Call us</p>
+              <p class="text-primary text-orange-400 font-bold text-[26px] md:text-[30px]">
+                <a href="tel:0558086645">055 808 6645</a>
+              </p>
+              <p class="text-primary text-orange-400 font-bold text-[26px] md:text-[30px]">
+                <a href="tel:0558658366">055 865 8366</a>
+              </p>
+              </div>
+            </div>
+            <div class=""><img src="images/contactus.png" alt="Contact us" class="max-h-96"></div>
+          </div>
         </div>
-
-        <!-- Call -->
-        <div class="max-w-fit mx-auto md:mx-0">
-          <p class="text-[20px] md:text-[22px]">Call us</p>
-          <p class="text-primary text-orange-400 font-bold text-[26px] md:text-[30px]">
-            <a href="tel:0558086645">055 808 6645</a>
-          </p>
-          <p class="text-primary text-orange-400 font-bold text-[26px] md:text-[30px]">
-            <a href="tel:0558658366">055 865 8366</a>
-          </p>
-        </div>
-  </div>
-
-
-<div class=""><img src="images/contactus.png" alt="Contact us" class="max-h-96"></div></div>
+      </div>
+    </div>
 
 
 <footer class="py-16 bg-[#242424]">
@@ -177,11 +179,12 @@
 
   <!-- Copyright -->
   <div class="border-t-2 border-gray-600 mt-6 pt-6 md:ml-24 px-4 md:px-6 text-gray-400 text-xs text-center md:text-left">
-    © 2025 Uzo. All rights reserved.
+    copyright © 2025 Uzo. All rights reserved.
   </div>
 </footer>
 
 </body>
 </html>
+
 
 
