your message here

--- a/faq.html
+++ b/faq.html
@@ -379,9 +379,9 @@
 
           <!-- Links -->
           <div class="flex space-x-8 pl-0 md:pl-8">
-            <a href="/terms" class="text-xs leading-6 text-white font-normal">Terms and Conditions</a>
-            <a href="/privacy" class="text-xs leading-6 text-white font-normal">Privacy Policy</a>
-            <a href="/contact" class="text-xs leading-6 text-white font-normal">Contact Us</a>
+            <a href="terms.html" class="text-xs leading-6 text-white font-normal">Terms and Conditions</a>
+            <a href="privacy.html" class="text-xs leading-6 text-white font-normal">Privacy Policy</a>
+            <a href="contact.html" class="text-xs leading-6 text-white font-normal">Contact Us</a>
           </div>
         </div>
 
