--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             With Uzo, you can get your unique short-code and <br> build your USSD app on a single platform!!!
           </p>
           <br>  
-           <div class="mx-auto max-w-7xl px-6 lg:px-8">   <!-- same container as the rest of the site -->
+           <div class="relative mt-4 lg:col-span-7 mt-0 xl:col-span-6">   <!-- same container as the rest of the site -->
           <a href="#" class="bg-gradient-to-b from-[#FDA23A] to-[#E67E12] text-white px-12 py-2 rounded-full text-lg font-semibold hover:from-yellow-500 hover:to-orange-600 transition">
             Get Your Free Account
           </a>
@@ -234,9 +234,9 @@
     <div class="flex flex-col md:flex-row items-center md:items-start ml-4 md:ml-12">
       <a href="/" class="text-lg text-orange-400 font-bold mb-4 md:mb-0">UZO</a>
       <div class="flex space-x-8 pl-0 md:pl-8">
-        <a href="/terms" class="text-xs leading-6 text-white font-normal">Terms and Conditions</a>
-        <a href="/privacy" class="text-xs leading-6 text-white font-normal">Privacy Policy</a>
-        <a href="/contact" class="text-xs leading-6 text-white font-normal">Contact Us</a>
+        <a href="terms.html" class="text-xs leading-6 text-white font-normal">Terms and Conditions</a>
+        <a href="privacy.html" class="text-xs leading-6 text-white font-normal">Privacy Policy</a>
+        <a href="contact.html" class="text-xs leading-6 text-white font-normal">Contact Us</a>
       </div>
     </div>
     <div class="border-t-2 border-gray-600 mt-6 pt-6 md:ml-24 px-4 md:px-6 text-gray-400 text-xs text-center md:text-left">
