--- a/pricing.html
+++ b/pricing.html
@@ -212,7 +212,7 @@
                   <!-- Tooltip -->
                   <div class="absolute bottom-full left-1/2 -translate-x-1/2 mb-2 hidden opacity-0 group-hover:block group-hover:opacity-100 transition-opacity duration-200">
                     <div class="relative bg-gray-900 text-white text-xs rounded-lg px-3 py-2 w-52 text-center shadow-lg">
-                      This refers to the number of apps that can be deployed at a time.
+                     Amount of storage available for your Uzo apps in production.
                       <div class="absolute left-1/2 -bottom-1 transform -translate-x-1/2 w-2 h-2 bg-gray-900 rotate-45"></div>
                     </div>
                   </div>
@@ -236,7 +236,7 @@
 
                   <div class="absolute bottom-full left-1/2 -translate-x-1/2 mb-2 hidden opacity-0 group-hover:block group-hover:opacity-100 transition-opacity duration-200">
                     <div class="relative bg-gray-900 text-white text-xs rounded-lg px-3 py-2 w-52 text-center shadow-lg">
-                      This refers to the storage allocation that has been given to Uzo apps in production.
+                     The number of monthly usage units your apps can consume in production.
                       <div class="absolute left-1/2 -bottom-1 transform -translate-x-1/2 w-2 h-2 bg-gray-900 rotate-45"></div>
                     </div>
                   </div>
@@ -274,7 +274,7 @@
                   <!-- Tooltip -->
                   <div class="absolute bottom-full left-1/2 -translate-x-1/2 mb-2 hidden opacity-0 group-hover:block group-hover:opacity-100 transition-opacity duration-200">
                     <div class="relative bg-gray-900 text-white text-xs rounded-lg px-3 py-2 w-52 text-center shadow-lg">
-                      This refers to the number of apps that can be deployed at a time.
+                     Amount of storage available for your Uzo apps in production.
                       <div class="absolute left-1/2 -bottom-1 transform -translate-x-1/2 w-2 h-2 bg-gray-900 rotate-45"></div>
                     </div>
                   </div>
@@ -298,7 +298,7 @@
 
                   <div class="absolute bottom-full left-1/2 -translate-x-1/2 mb-2 hidden opacity-0 group-hover:block group-hover:opacity-100 transition-opacity duration-200">
                     <div class="relative bg-gray-900 text-white text-xs rounded-lg px-3 py-2 w-52 text-center shadow-lg">
-                      This refers to the storage allocation that has been given to Uzo apps in production.
+                     The number of monthly usage units your apps can consume in production.
                       <div class="absolute left-1/2 -bottom-1 transform -translate-x-1/2 w-2 h-2 bg-gray-900 rotate-45"></div>
                     </div>
                   </div>
@@ -329,13 +329,13 @@
                 <div class="relative group ml-2">
                   <!-- Info icon -->
                   <svg width="20" height="20" viewBox="0 0 24 24" class="h-4 w-4 text-gray-500 hover:text-cyan-500 cursor-pointer">
-                    <path fill="currentColor" d="M12 2c5.523 0 10 4.477 10 10s-4.477 10-10 10S2 17.523 2 12S6.477 2 12 2m-.01 8H11a1 1 0 0 0-.117 1.993L11 12v4.99c0 .52.394.95.9 1.004l.11.006h.49a1 1 0 0 0 .596-1.803L13 16.134V11.01c0-.52-.394-.95-.9-1.004zM12 7a1 1 0 1 0 0 2a1 1 0 0 0 0-2"/>
+                    <path fill="gray-200" d="M12 2c5.523 0 10 4.477 10 10s-4.477 10-10 10S2 17.523 2 12S6.477 2 12 2m-.01 8H11a1 1 0 0 0-.117 1.993L11 12v4.99c0 .52.394.95.9 1.004l.11.006h.49a1 1 0 0 0 .596-1.803L13 16.134V11.01c0-.52-.394-.95-.9-1.004zM12 7a1 1 0 1 0 0 2a1 1 0 0 0 0-2"/>
                   </svg>
 
                   <!-- Tooltip -->
                   <div class="absolute bottom-full left-1/2 -translate-x-1/2 mb-2 hidden opacity-0 group-hover:block group-hover:opacity-100 transition-opacity duration-200">
                     <div class="relative bg-gray-900 text-white text-xs rounded-lg px-3 py-2 w-52 text-center shadow-lg">
-                      This refers to the number of apps that can be deployed at a time.
+                     Amount of storage available for your Uzo apps in production.
                       <div class="absolute left-1/2 -bottom-1 transform -translate-x-1/2 w-2 h-2 bg-gray-900 rotate-45"></div>
                     </div>
                   </div>
@@ -354,12 +354,12 @@
                 20,000 workload units
                 <div class="relative group ml-2">
                   <svg width="20" height="20" viewBox="0 0 24 24" class="h-4 w-4 text-gray-500 hover:text-cyan-500 cursor-pointer">
-                    <path fill="currentColor" d="M12 2c5.523 0 10 4.477 10 10s-4.477 10-10 10S2 17.523 2 12S6.477 2 12 2m-.01 8H11a1 1 0 0 0-.117 1.993L11 12v4.99c0 .52.394.95.9 1.004l.11.006h.49a1 1 0 0 0 .596-1.803L13 16.134V11.01c0-.52-.394-.95-.9-1.004zM12 7a1 1 0 1 0 0 2a1 1 0 0 0 0-2"/>
+                    <path fill="gray-200" d="M12 2c5.523 0 10 4.477 10 10s-4.477 10-10 10S2 17.523 2 12S6.477 2 12 2m-.01 8H11a1 1 0 0 0-.117 1.993L11 12v4.99c0 .52.394.95.9 1.004l.11.006h.49a1 1 0 0 0 .596-1.803L13 16.134V11.01c0-.52-.394-.95-.9-1.004zM12 7a1 1 0 1 0 0 2a1 1 0 0 0 0-2"/>
                   </svg>
 
                   <div class="absolute bottom-full left-1/2 -translate-x-1/2 mb-2 hidden opacity-0 group-hover:block group-hover:opacity-100 transition-opacity duration-200">
                     <div class="relative bg-gray-900 text-white text-xs rounded-lg px-3 py-2 w-52 text-center shadow-lg">
-                      This refers to the storage allocation that has been given to Uzo apps in production.
+                     The number of monthly usage units your apps can consume in production.
                       <div class="absolute left-1/2 -bottom-1 transform -translate-x-1/2 w-2 h-2 bg-gray-900 rotate-45"></div>
                     </div>
                   </div>
@@ -390,13 +390,13 @@
                 <div class="relative group ml-2">
                   <!-- Info icon -->
                   <svg width="20" height="20" viewBox="0 0 24 24" class="h-4 w-4 text-gray-500 hover:text-cyan-500 cursor-pointer">
-                    <path fill="currentColor" d="M12 2c5.523 0 10 4.477 10 10s-4.477 10-10 10S2 17.523 2 12S6.477 2 12 2m-.01 8H11a1 1 0 0 0-.117 1.993L11 12v4.99c0 .52.394.95.9 1.004l.11.006h.49a1 1 0 0 0 .596-1.803L13 16.134V11.01c0-.52-.394-.95-.9-1.004zM12 7a1 1 0 1 0 0 2a1 1 0 0 0 0-2"/>
+                    <path fill="gray-200" d="M12 2c5.523 0 10 4.477 10 10s-4.477 10-10 10S2 17.523 2 12S6.477 2 12 2m-.01 8H11a1 1 0 0 0-.117 1.993L11 12v4.99c0 .52.394.95.9 1.004l.11.006h.49a1 1 0 0 0 .596-1.803L13 16.134V11.01c0-.52-.394-.95-.9-1.004zM12 7a1 1 0 1 0 0 2a1 1 0 0 0 0-2"/>
                   </svg>
 
                   <!-- Tooltip -->
                   <div class="absolute bottom-full left-1/2 -translate-x-1/2 mb-2 hidden opacity-0 group-hover:block group-hover:opacity-100 transition-opacity duration-200">
                     <div class="relative bg-gray-900 text-white text-xs rounded-lg px-3 py-2 w-52 text-center shadow-lg">
-                      This refers to the number of apps that can be deployed at a time.
+                     Amount of storage available for your Uzo apps in production.
                       <div class="absolute left-1/2 -bottom-1 transform -translate-x-1/2 w-2 h-2 bg-gray-900 rotate-45"></div>
                     </div>
                   </div>
@@ -415,12 +415,12 @@
                 30,000 workload units
                 <div class="relative group ml-2">
                   <svg width="20" height="20" viewBox="0 0 24 24" class="h-4 w-4 text-gray-500 hover:text-cyan-500 cursor-pointer">
-                    <path fill="currentColor" d="M12 2c5.523 0 10 4.477 10 10s-4.477 10-10 10S2 17.523 2 12S6.477 2 12 2m-.01 8H11a1 1 0 0 0-.117 1.993L11 12v4.99c0 .52.394.95.9 1.004l.11.006h.49a1 1 0 0 0 .596-1.803L13 16.134V11.01c0-.52-.394-.95-.9-1.004zM12 7a1 1 0 1 0 0 2a1 1 0 0 0 0-2"/>
+                    <path fill="gray-200" d="M12 2c5.523 0 10 4.477 10 10s-4.477 10-10 10S2 17.523 2 12S6.477 2 12 2m-.01 8H11a1 1 0 0 0-.117 1.993L11 12v4.99c0 .52.394.95.9 1.004l.11.006h.49a1 1 0 0 0 .596-1.803L13 16.134V11.01c0-.52-.394-.95-.9-1.004zM12 7a1 1 0 1 0 0 2a1 1 0 0 0 0-2"/>
                   </svg>
 
                   <div class="absolute bottom-full left-1/2 -translate-x-1/2 mb-2 hidden opacity-0 group-hover:block group-hover:opacity-100 transition-opacity duration-200">
                     <div class="relative bg-gray-900 text-white text-xs rounded-lg px-3 py-2 w-52 text-center shadow-lg">
-                      This refers to the storage allocation that has been given to Uzo apps in production.
+                     The number of monthly usage units your apps can consume in production.
                       <div class="absolute left-1/2 -bottom-1 transform -translate-x-1/2 w-2 h-2 bg-gray-900 rotate-45"></div>
                     </div>
                   </div>
@@ -451,13 +451,13 @@
                 <div class="relative group ml-2">
                   <!-- Info icon -->
                   <svg width="20" height="20" viewBox="0 0 24 24" class="h-4 w-4 text-gray-500 hover:text-cyan-500 cursor-pointer">
-                    <path fill="currentColor" d="M12 2c5.523 0 10 4.477 10 10s-4.477 10-10 10S2 17.523 2 12S6.477 2 12 2m-.01 8H11a1 1 0 0 0-.117 1.993L11 12v4.99c0 .52.394.95.9 1.004l.11.006h.49a1 1 0 0 0 .596-1.803L13 16.134V11.01c0-.52-.394-.95-.9-1.004zM12 7a1 1 0 1 0 0 2a1 1 0 0 0 0-2"/>
+                    <path fill="gray-200" d="M12 2c5.523 0 10 4.477 10 10s-4.477 10-10 10S2 17.523 2 12S6.477 2 12 2m-.01 8H11a1 1 0 0 0-.117 1.993L11 12v4.99c0 .52.394.95.9 1.004l.11.006h.49a1 1 0 0 0 .596-1.803L13 16.134V11.01c0-.52-.394-.95-.9-1.004zM12 7a1 1 0 1 0 0 2a1 1 0 0 0 0-2"/>
                   </svg>
 
                   <!-- Tooltip -->
                   <div class="absolute bottom-full left-1/2 -translate-x-1/2 mb-2 hidden opacity-0 group-hover:block group-hover:opacity-100 transition-opacity duration-200">
                     <div class="relative bg-gray-900 text-white text-xs rounded-lg px-3 py-2 w-52 text-center shadow-lg">
-                      This refers to the number of apps that can be deployed at a time.
+                     Amount of storage available for your Uzo apps in production.
                       <div class="absolute left-1/2 -bottom-1 transform -translate-x-1/2 w-2 h-2 bg-gray-900 rotate-45"></div>
                     </div>
                   </div>
@@ -476,12 +476,12 @@
                 50,000 workload units
                 <div class="relative group ml-2">
                   <svg width="20" height="20" viewBox="0 0 24 24" class="h-4 w-4 text-gray-500 hover:text-cyan-500 cursor-pointer">
-                    <path fill="currentColor" d="M12 2c5.523 0 10 4.477 10 10s-4.477 10-10 10S2 17.523 2 12S6.477 2 12 2m-.01 8H11a1 1 0 0 0-.117 1.993L11 12v4.99c0 .52.394.95.9 1.004l.11.006h.49a1 1 0 0 0 .596-1.803L13 16.134V11.01c0-.52-.394-.95-.9-1.004zM12 7a1 1 0 1 0 0 2a1 1 0 0 0 0-2"/>
+                    <path fill="gray-200" d="M12 2c5.523 0 10 4.477 10 10s-4.477 10-10 10S2 17.523 2 12S6.477 2 12 2m-.01 8H11a1 1 0 0 0-.117 1.993L11 12v4.99c0 .52.394.95.9 1.004l.11.006h.49a1 1 0 0 0 .596-1.803L13 16.134V11.01c0-.52-.394-.95-.9-1.004zM12 7a1 1 0 1 0 0 2a1 1 0 0 0 0-2"/>
                   </svg>
 
                   <div class="absolute bottom-full left-1/2 -translate-x-1/2 mb-2 hidden opacity-0 group-hover:block group-hover:opacity-100 transition-opacity duration-200">
                     <div class="relative bg-gray-900 text-white text-xs rounded-lg px-3 py-2 w-52 text-center shadow-lg">
-                      This refers to the storage allocation that has been given to Uzo apps in production.
+                     The number of monthly usage units your apps can consume in production.
                       <div class="absolute left-1/2 -bottom-1 transform -translate-x-1/2 w-2 h-2 bg-gray-900 rotate-45"></div>
                     </div>
                   </div>
@@ -512,13 +512,13 @@
                 <div class="relative group ml-2">
                   <!-- Info icon -->
                   <svg width="20" height="20" viewBox="0 0 24 24" class="h-4 w-4 text-gray-500 hover:text-cyan-500 cursor-pointer">
-                    <path fill="currentColor" d="M12 2c5.523 0 10 4.477 10 10s-4.477 10-10 10S2 17.523 2 12S6.477 2 12 2m-.01 8H11a1 1 0 0 0-.117 1.993L11 12v4.99c0 .52.394.95.9 1.004l.11.006h.49a1 1 0 0 0 .596-1.803L13 16.134V11.01c0-.52-.394-.95-.9-1.004zM12 7a1 1 0 1 0 0 2a1 1 0 0 0 0-2"/>
+                    <path fill="gray-200" d="M12 2c5.523 0 10 4.477 10 10s-4.477 10-10 10S2 17.523 2 12S6.477 2 12 2m-.01 8H11a1 1 0 0 0-.117 1.993L11 12v4.99c0 .52.394.95.9 1.004l.11.006h.49a1 1 0 0 0 .596-1.803L13 16.134V11.01c0-.52-.394-.95-.9-1.004zM12 7a1 1 0 1 0 0 2a1 1 0 0 0 0-2"/>
                   </svg>
 
                   <!-- Tooltip -->
                   <div class="absolute bottom-full left-1/2 -translate-x-1/2 mb-2 hidden opacity-0 group-hover:block group-hover:opacity-100 transition-opacity duration-200">
                     <div class="relative bg-gray-900 text-white text-xs rounded-lg px-3 py-2 w-52 text-center shadow-lg">
-                      This refers to the number of apps that can be deployed at a time.
+                     Amount of storage available for your Uzo apps in production.
                       <div class="absolute left-1/2 -bottom-1 transform -translate-x-1/2 w-2 h-2 bg-gray-900 rotate-45"></div>
                     </div>
                   </div>
@@ -537,12 +537,12 @@
                 100,000 workload units
                 <div class="relative group ml-2">
                   <svg width="20" height="20" viewBox="0 0 24 24" class="h-4 w-4 text-gray-500 hover:text-cyan-500 cursor-pointer">
-                    <path fill="currentColor" d="M12 2c5.523 0 10 4.477 10 10s-4.477 10-10 10S2 17.523 2 12S6.477 2 12 2m-.01 8H11a1 1 0 0 0-.117 1.993L11 12v4.99c0 .52.394.95.9 1.004l.11.006h.49a1 1 0 0 0 .596-1.803L13 16.134V11.01c0-.52-.394-.95-.9-1.004zM12 7a1 1 0 1 0 0 2a1 1 0 0 0 0-2"/>
+                    <path fill="gray-200" d="M12 2c5.523 0 10 4.477 10 10s-4.477 10-10 10S2 17.523 2 12S6.477 2 12 2m-.01 8H11a1 1 0 0 0-.117 1.993L11 12v4.99c0 .52.394.95.9 1.004l.11.006h.49a1 1 0 0 0 .596-1.803L13 16.134V11.01c0-.52-.394-.95-.9-1.004zM12 7a1 1 0 1 0 0 2a1 1 0 0 0 0-2"/>
                   </svg>
 
                   <div class="absolute bottom-full left-1/2 -translate-x-1/2 mb-2 hidden opacity-0 group-hover:block group-hover:opacity-100 transition-opacity duration-200">
                     <div class="relative bg-gray-900 text-white text-xs rounded-lg px-3 py-2 w-52 text-center shadow-lg">
-                      This refers to the storage allocation that has been given to Uzo apps in production.
+                     The number of monthly usage units your apps can consume in production.
                       <div class="absolute left-1/2 -bottom-1 transform -translate-x-1/2 w-2 h-2 bg-gray-900 rotate-45"></div>
                     </div>
                   </div>
@@ -859,9 +859,9 @@
         <div class="flex flex-col md:flex-row items-center md:items-start ml-4 md:ml-12">
           <a href="/" class="text-lg text-orange-400 font-bold mb-4 md:mb-0">UZO</a>
           <div class="flex space-x-8 pl-0 md:pl-8">
-            <a href="/terms" class="text-xs leading-6 text-white font-normal">Terms and Conditions</a>
-            <a href="/privacy" class="text-xs leading-6 text-white font-normal">Privacy Policy</a>
-            <a href="/contact" class="text-xs leading-6 text-white font-normal">Contact Us</a>
+            <a href="terms.html" class="text-xs leading-6 text-white font-normal">Terms and Conditions</a>
+            <a href="privacy.html" class="text-xs leading-6 text-white font-normal">Privacy Policy</a>
+            <a href="contact.html" class="text-xs leading-6 text-white font-normal">Contact Us</a>
           </div>
         </div>
         <div class="border-t-2 border-gray-600 mt-6 pt-6 md:ml-24 px-4 md:px-6 text-gray-400 text-xs text-center md:text-left">
