--- a/terms.html
+++ b/terms.html
@@ -127,17 +127,18 @@
      <iframe class="h-screen" title="Terms and Conditions" src="https://docs.google.com/document/d/1LO06JVQfrCWzyBC0XL_vEe77JDchrt4yibXUDTSi2rw/pub?embedded=true"></iframe>
 
     <!-- ==================== FOOTER ==================== -->
-    <footer class="py-16 bg-grey800">
-      <div class="flex items-center ml-4 md:ml-12">
-        <a class="text-lg text-primary font-bold" href="/">UZO</a>
-        <div class="space-x-8 pl-8">
-          <a class="text-xs leading-6 text-white font-normal" href="terms.html">Terms and Conditions</a>
-          <a class="text-xs leading-6 text-white font-normal" href="privacy.html">Privacy Policy</a>
-          <a class="text-xs leading-6 text-white font-normal" href="contact.html">Contact Us</a>
+    <!-- FOOTER -->
+    <footer class="py-16 bg-[#242424]">
+      <div class="flex flex-col md:flex-row items-center md:items-start ml-4 md:ml-12">
+        <a href="/" class="text-lg text-orange-400 font-bold mb-4 md:mb-0">UZO</a>
+        <div class="flex space-x-8 pl-0 md:pl-8">
+          <a href="terms.html" class="text-xs leading-6 text-white font-normal">Terms and Conditions</a>
+          <a href="privacy.html" class="text-xs leading-6 text-white font-normal">Privacy Policy</a>
+          <a href="contact.html" class="text-xs leading-6 text-white font-normal">Contact Us</a>
         </div>
       </div>
-      <div class="border-t-2 border-t-grey600 mt-6 pt-6 md:ml-24 px-4 md:px-6 text-grey400 text-xs text-center md:text-left">
-        Copyright © Uzo. All rights reserved.
+      <div class="border-t-2 border-gray-600 mt-6 pt-6 md:ml-24 px-4 md:px-6 text-gray-400 text-xs text-center md:text-left">
+        copyright © 2025 Uzo. All rights reserved.
       </div>
     </footer>
   </div>
