--- a/faq.html
+++ b/faq.html
@@ -182,16 +182,31 @@
                   </div>
                   <div class="relative mb-3 rounded-xl border border-gray-200 border-solid faq-item">
                     <h6>
-                      <button class="relative flex items-center w-full p-4 font-semibold text-left transition-all ease-in border-b border-solid cursor-pointer border-gray-100 rounded-t-xl group faq-button" data-collapse-target="animated-collapse-3">
-                        <span class="faq-question text-black">What are workload units?</span>
+                      <button class="relative flex items-center w-full p-4 font-semibold text-left transition-all ease-in border-b border-solid cursor-pointer border-gray-100 rounded-t-xl group faq-button" data-collapse-target="animated-collapse-6">
+                        <span class="faq-question text-black">What is a dedicated USSD code?</span>
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="faq-chevron size-6 absolute right-2 group-open:rotate-180" style="color: #f97316;">
                           <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5"></path>
                         </svg>
                       </button>
                     </h6>
-                    <div data-collapse="animated-collapse-3" class="h-0 overflow-hidden transition-all duration-300 ease-in-out">
+                    <div data-collapse="animated-collapse-6" class="h-0 overflow-hidden transition-all duration-300 ease-in-out">
                       <div class="p-4 text-sm leading-normal text-gray-700 faq-answer" style="color: #374151 !important;">
-                        Workload units represent the basic unit of processing for an Uzo App. For each execution of your application, a specific number of workload units are required for processing. Workload units are required by applications in deployed state to ensure accessibility.
+                        A dedicated USSD code is a short number that is assigned and used by only one enterprise or service. It has only one segment, such as *123#. A dedicated USSD code allows enterprises to have full control and flexibility over their USSD services. It also gives enterprises access to a wide range of extensions such as *123*34#.
+                      </div>
+                    </div>
+                  </div>
+                  <div class="relative mb-3 rounded-xl border border-gray-200 border-solid faq-item">
+                    <h6>
+                      <button class="relative flex items-center w-full p-4 font-semibold text-left transition-all ease-in border-b border-solid cursor-pointer border-gray-100 rounded-t-xl group faq-button" data-collapse-target="animated-collapse-9">
+                        <span class="faq-question text-black">What is a USSD extension?</span>
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="faq-chevron size-6 absolute right-2 group-open:rotate-180" style="color: #f97316;">
+                          <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5"></path>
+                        </svg>
+                      </button>
+                    </h6>
+                    <div data-collapse="animated-collapse-9" class="h-0 overflow-hidden transition-all duration-300 ease-in-out">
+                      <div class="p-4 text-sm leading-normal text-gray-700 faq-answer" style="color: #374151 !important;">
+                        A USSD extension is a variation of the dedicated USSD code that gives users the ability to have multiple applications riding on the same dedicated USSD code. For example, a dedicated code *1234# can have extensions such as *1234*1#, *1234*5#, *1234*12*54# etc. linked to completely different applications running concurrently with your main application.
                       </div>
                     </div>
                   </div>
@@ -227,19 +242,20 @@
                   </div>
                   <div class="relative mb-3 rounded-xl border border-gray-200 border-solid faq-item">
                     <h6>
-                      <button class="relative flex items-center w-full p-4 font-semibold text-left transition-all ease-in border-b border-solid cursor-pointer border-gray-100 rounded-t-xl group faq-button" data-collapse-target="animated-collapse-6">
-                        <span class="faq-question text-black">What is a dedicated USSD code?</span>
+                      <button class="relative flex items-center w-full p-4 font-semibold text-left transition-all ease-in border-b border-solid cursor-pointer border-gray-100 rounded-t-xl group faq-button" data-collapse-target="animated-collapse-3">
+                        <span class="faq-question text-black">What are workload units?</span>
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="faq-chevron size-6 absolute right-2 group-open:rotate-180" style="color: #f97316;">
                           <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5"></path>
                         </svg>
                       </button>
                     </h6>
-                    <div data-collapse="animated-collapse-6" class="h-0 overflow-hidden transition-all duration-300 ease-in-out">
+                    <div data-collapse="animated-collapse-3" class="h-0 overflow-hidden transition-all duration-300 ease-in-out">
                       <div class="p-4 text-sm leading-normal text-gray-700 faq-answer" style="color: #374151 !important;">
-                        A dedicated USSD code is a short number that is assigned and used by only one enterprise or service. It has only one segment, such as *123#. A dedicated USSD code allows enterprises to have full control and flexibility over their USSD services. It also gives enterprises access to a wide range of extensions such as *123*34#.
+                        Workload units represent the basic unit of processing for an Uzo App. For each execution of your application, a specific number of workload units are required for processing. Workload units are required by applications in deployed state to ensure accessibility.
                       </div>
                     </div>
                   </div>
+                  
                   <div class="relative mb-3 rounded-xl border border-gray-200 border-solid faq-item">
                     <h6>
                       <button class="relative flex items-center w-full p-4 font-semibold text-left transition-all ease-in border-b border-solid cursor-pointer border-gray-100 rounded-t-xl group faq-button" data-collapse-target="animated-collapse-7">
@@ -270,21 +286,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="relative mb-3 rounded-xl border border-gray-200 border-solid faq-item">
-                    <h6>
-                      <button class="relative flex items-center w-full p-4 font-semibold text-left transition-all ease-in border-b border-solid cursor-pointer border-gray-100 rounded-t-xl group faq-button" data-collapse-target="animated-collapse-9">
-                        <span class="faq-question text-black">What is a USSD extension?</span>
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="faq-chevron size-6 absolute right-2 group-open:rotate-180" style="color: #f97316;">
-                          <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5"></path>
-                        </svg>
-                      </button>
-                    </h6>
-                    <div data-collapse="animated-collapse-9" class="h-0 overflow-hidden transition-all duration-300 ease-in-out">
-                      <div class="p-4 text-sm leading-normal text-gray-700 faq-answer" style="color: #374151 !important;">
-                        A USSD extension is a variation of the dedicated USSD code that gives users the ability to have multiple applications riding on the same dedicated USSD code. For example, a dedicated code *1234# can have extensions such as *1234*1#, *1234*5#, *1234*12*54# etc. linked to completely different applications running concurrently with your main application.
-                      </div>
-                    </div>
-                  </div>
+                  
                   <div class="relative mb-3 rounded-xl border border-gray-200 border-solid faq-item">
                     <h6>
                       <button class="relative flex items-center w-full p-4 font-semibold text-left transition-all ease-in border-b border-solid cursor-pointer border-gray-100 rounded-t-xl group faq-button" data-collapse-target="animated-collapse-10">
@@ -387,7 +389,11 @@
 
         <!-- Copyright -->
         <div class="border-t-2 border-gray-600 mt-6 pt-6 md:ml-24 px-4 md:px-6 text-gray-400 text-xs text-center md:text-left">
-          © 2025 Uzo. All rights reserved.
+         Copyright © <span id="currentYear"></span> Uzo. All rights reserved.
+          <script>
+            // Add this script right before the closing </body> tag
+            document.getElementById('currentYear').textContent = new Date().getFullYear();
+          </script>
         </div>
       </footer>
     </div>
