--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
             </li>
             <li>
                <h3 class="text-lg font-semibold leading-6 text-gray-900">What are workload units?</h3>
-              <p class="mt-4 text-md text-gray-700">Workload units represent the basic unit of processing for a Uzo App. For each execution of your application, a specific number of workload units are required for processing. Workload units ensure accessibility for deployed applications.</p>
+              <p class="mt-4 text-md text-gray-700">Workload units represent the basic unit of processing for an Uzo App. For each execution of your application, a specific number of workload units are required for processing. Workload units ensure accessibility for deployed applications.</p>
             </li>
           </ul>
         </li>
