--- a/pricing.html
+++ b/pricing.html
@@ -835,7 +835,7 @@
           <div class="mt-2 text-lg tracking-tight text-slate-600"  style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;">
             <p>Operate at scale with your own fully isolated environment, tailored to your organization’s needs.</p>
             <p class="mt-8">
-             From custom branding to private deployments and guaranteed SLAs, this package gives you maximum performance, security, and support.
+             With private deployments and guaranteed SLAs, this package gives you maximum performance, security, and support.
             </p>
             <p class="mt-8">
             Pricing varies based on deployment requirements, infrastructure choices, and service levels.
@@ -861,7 +861,9 @@
           <p class="order-first flex font-display font-bold">
             <span class="mt-1 text-4xl tracking-tight">Uzo Enterprise</span>
           </p>
-
+          <p class="mt-2 text-md tracking-tight">
+            Full autonomy and scalability with your own dedicated software instance.
+          </p>
 
           <div class="mt-8 w-full flex justify-center">
             <div class="text-white font-semibold tracking-tight text-3xl pb-1 inline-block">
@@ -919,7 +921,7 @@
         </div>
       </div>
         <!-- Contact Us Button for Dedicated Code -->
-        <div class="mt-12 flex justify-center">
+        <div class="flex justify-center">
           <a href="contact.html"
             class="bg-gradient-to-b from-yellow-400 to-orange-500 text-white px-8 py-3 rounded-full text-lg font-semibold hover:from-yellow-500 hover:to-orange-600 transition-all duration-300">
             Contact Us
@@ -954,7 +956,7 @@
 
     <!-- More than Clients Section -->
         <div class="bg-white">
-      <div class="py-24 relative rounded-xl">
+      <div class="py-20 relative rounded-xl">
         <div class="font-bold text-[40px] text-center">
          More than clients, they’re believers.
       </div>
