--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>UzoUSSD</title>
+  <title>Uzo - USSD Application Platform</title>
+  <!-- Favicon Links -->
+  <link rel="icon" type="image/x-icon" href="images/favicon.ico">
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
   <style>
@@ -34,18 +36,39 @@
     </div>
 
     <!-- Desktop links -->
-    <div class="hidden lg:flex lg:gap-x-8 lg:justify-end items-center pr-6 border-r border-gray-300">
-      <a class="nav-link text-sm leading-6 text-gray-700 font-bold" href="/" id="home-link">Home</a>
-      <a class="nav-link text-sm leading-6 text-gray-600 font-bold" href="pricing.html" id="pricing-link">Pricing</a>
-      <a class="nav-link text-sm leading-6 text-gray-600 font-bold" href="faq.html" id="faq-link">FAQ</a>
-      <a class="nav-link text-sm leading-6 text-gray-600 font-bold" href="contact.html" id="contact-link">Contact Us</a>
-    </div>
+    <!-- Desktop links -->
+<div class="hidden lg:flex lg:gap-x-8 lg:justify-end items-center pr-6 border-r border-gray-300">
+  <a class="nav-link text-sm leading-6 text-gray-600 font-bold" href="index.html" id="home-link">Home</a>
+  <a class="nav-link text-sm leading-6 text-gray-600 font-bold" href="pricing.html" id="pricing-link">Pricing</a>
+  <a class="nav-link text-sm leading-6 text-gray-600 font-bold" href="faq.html" id="faq-link">FAQ</a>
+  <a class="nav-link text-sm leading-6 text-gray-600 font-bold" href="contact.html" id="contact-link">Contact Us</a>
+</div>
 
-    <div class="hidden lg:flex lg:gap-x-8 lg:justify-end items-center ml-6">
-      <a class="text-md text-orange-400 font-bold" href="https://app.uzoussd.com/app/login">Log in</a>
-      <a class="rounded-full bg-orange-400 text-white px-6 py-2 border drop-shadow font-bold" href="https://app.uzoussd.com/app/register">Get Started</a>
-    </div>
-  </nav>
+<div class="hidden lg:flex lg:gap-x-8 lg:justify-end items-center ml-6">
+  <a class="text-md text-orange-400 font-bold" href="https://app.uzoussd.com/app/login">Log in</a>
+  <a class="rounded-full bg-orange-400 text-white px-6 py-2 border drop-shadow font-bold" href="https://app.uzoussd.com/app/register">Get Started</a>
+</div>
+</nav>
+
+<!-- Mobile Menu (Hidden by default) -->
+<div id="mobile-menu" class="hidden lg:hidden absolute top-20 left-0 right-0 px-4 py-4 bg-white w-full flex flex-col shadow-lg z-50">
+  <a class="text-sm leading-6 text-gray-700 font-bold py-4 hover:text-orange-400 transition" href="">Home</a>
+  <a class="text-sm leading-6 text-gray-700 font-bold py-4 hover:text-orange-400 transition" href="pricing.html">Pricing</a>
+  <a class="text-sm leading-6 text-gray-700 font-bold py-4 hover:text-orange-400 transition" href="faq.html">FAQ</a>
+  <a class="text-sm leading-6 text-gray-700 font-bold py-4 hover:text-orange-400 transition" href="contact.html">Contact Us</a>
+</div>
+
+<script>
+  // Mobile menu toggle
+  const menuButton = document.querySelector('button[type="button"]');
+  const mobileMenu = document.getElementById('mobile-menu');
+  
+  if (menuButton && mobileMenu) {
+    menuButton.addEventListener('click', () => {
+      mobileMenu.classList.toggle('hidden');
+    });
+  }
+</script> 
 
   <!-- ==================== JS for sticky nav & active link ==================== -->
   <script>
@@ -72,7 +95,7 @@
           </p>
           <br>  
            <div class="relative mt-4 lg:col-span-7 mt-0 xl:col-span-6">   <!-- same container as the rest of the site -->
-          <a href="#" class="bg-gradient-to-b from-[#FDA23A] to-[#E67E12] text-white px-12 py-2 rounded-full text-lg font-semibold hover:from-yellow-500 hover:to-orange-600 transition">
+          <a href="https://app.uzoussd.com/app/register" class="bg-gradient-to-b from-[#FDA23A] to-[#E67E12] text-white px-12 py-2 rounded-full text-lg font-semibold hover:from-yellow-500 hover:to-orange-600 transition">
             Get Your Free Account
           </a>
           </div>
@@ -196,8 +219,8 @@
   </section>
 
   <!-- FAQ -->
-  <section id="faqs" class="border-t border-gray-200 py-20 sm:py-32 bg-[#eceef0]">
-    <div class="mx-auto max-w-7xl px-6 lg:px-8">
+  <section id="faqs" class="border-t border-gray-200 py-20 sm:py-32 bg-[#eceef0]" >
+    <div class="mx-auto max-w-7xl px-6 lg:px-8" style="font-family: Arial, Helvetica, sans-serif;">
       <div class="mx-auto max-w-2xl lg:mx-0">
         <h2 class="text-3xl font-medium tracking-tight text-gray-900">Frequently asked questions</h2>
         <p class="mt-2 text-lg text-gray-600">
