--- a/terms.html
+++ b/terms.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>UzoUSSD</title>
+  <title>Uzo - USSD Application Platform</title>
+  <!-- Favicon Links -->
+  <link rel="icon" type="image/x-icon" href="images/favicon.ico">
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
   <style>
@@ -76,7 +78,7 @@
           </button>
         </div>
         <div class="hidden lg:flex lg:gap-x-8 lg:justify-end items-center pr-6 border-r border-lightgrey">
-          <a class="nav-link text-sm leading-6 text-gray-700 font-bold transition duration-300" href="index.html" id="home-link">Home</a>
+          <a class="nav-link text-sm leading-6 text-gray-600 font-bold transition duration-300" href="index.html" id="home-link">Home</a>
           <a class="nav-link text-sm leading-6 text-gray-600 font-bold transition duration-300" href="pricing.html" id="pricing-link">Pricing</a>
           <a class="nav-link text-sm leading-6 text-gray-600 font-bold transition duration-300" href="faq.html" id="faq-link">FAQ</a>
           <a class="nav-link text-sm leading-6 text-gray-600 font-bold transition duration-300" href="contact.html" id="contact-link">Contact Us</a>
@@ -86,6 +88,40 @@
           <a class="rounded-full bg-orange-400 text-white px-6 py-2 border drop-shadow font-bold" href="https://app.uzoussd.com/app/register">Get Started</a> <!-- Text remains white -->
         </div>
       </nav>
+
+      <!-- Desktop links -->
+<div class="hidden lg:flex lg:gap-x-8 lg:justify-end items-center pr-6 border-r border-gray-300">
+  <a class="nav-link text-sm leading-6 text-gray-600 font-bold" href="index.html" id="home-link">Home</a>
+  <a class="nav-link text-sm leading-6 text-gray-600 font-bold" href="pricing.html" id="pricing-link">Pricing</a>
+  <a class="nav-link text-sm leading-6 text-gray-600 font-bold" href="faq.html" id="faq-link">FAQ</a>
+  <a class="nav-link text-sm leading-6 text-gray-600 font-bold" href="contact.html" id="contact-link">Contact Us</a>
+</div>
+
+<div class="hidden lg:flex lg:gap-x-8 lg:justify-end items-center ml-6">
+  <a class="text-md text-orange-400 font-bold" href="https://app.uzoussd.com/app/login">Log in</a>
+  <a class="rounded-full bg-orange-400 text-white px-6 py-2 border drop-shadow font-bold" href="https://app.uzoussd.com/app/register">Get Started</a>
+</div>
+</nav>
+
+<!-- Mobile Menu (Hidden by default) -->
+<div id="mobile-menu" class="hidden lg:hidden absolute top-20 left-0 right-0 px-4 py-4 bg-white w-full flex flex-col shadow-lg z-50">
+  <a class="text-sm leading-6 text-gray-700 font-bold py-4 hover:text-orange-400 transition" href="index.html">Home</a>
+  <a class="text-sm leading-6 text-gray-700 font-bold py-4 hover:text-orange-400 transition" href="pricing.html">Pricing</a>
+  <a class="text-sm leading-6 text-gray-700 font-bold py-4 hover:text-orange-400 transition" href="faq.html">FAQ</a>
+  <a class="text-sm leading-6 text-gray-700 font-bold py-4 hover:text-orange-400 transition" href="contact.html">Contact Us</a>
+</div>
+
+<script>
+  // Mobile menu toggle
+  const menuButton = document.querySelector('button[type="button"]');
+  const mobileMenu = document.getElementById('mobile-menu');
+  
+  if (menuButton && mobileMenu) {
+    menuButton.addEventListener('click', () => {
+      mobileMenu.classList.toggle('hidden');
+    });
+  }
+</script>
 
       <!-- JavaScript for scroll detection and active link -->
       <script>
