--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 
   <!-- FAQ -->
   <section id="faqs" class="border-t border-gray-200 py-20 sm:py-32 bg-[#eceef0]" >
-    <div class="mx-auto max-w-7xl px-6 lg:px-8" style="font-family: Arial, Helvetica, sans-serif;">
+    <div class="mx-auto max-w-7xl px-6 lg:px-8">
       <div class="mx-auto max-w-2xl lg:mx-0">
         <h2 class="text-3xl font-medium tracking-tight text-gray-900">Frequently asked questions</h2>
         <p class="mt-2 text-lg text-gray-600">
