--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
 <div id="root">
-  <!-- ==================== NAVBAR ==================== -->
+  <!--  NAVBAR  -->
   <nav id="main-nav" class="flex items-center justify-between p-6 lg:px-8 transition-all duration-300" aria-label="Global">
     <div class="flex lg:flex-1">
       <a href="/" class="-m-1.5 p-1.5"><span class="text-2xl font-bold logo-text">Uzo</span></a>
@@ -35,7 +35,7 @@
       </button>
     </div>
 
-    <!-- Desktop links -->
+    
     <!-- Desktop links -->
 <div class="hidden lg:flex lg:gap-x-8 lg:justify-end items-center pr-6 border-r border-gray-300">
   <a class="nav-link text-sm leading-6 text-gray-600 font-bold" href="index.html" id="home-link">Home</a>
@@ -56,6 +56,10 @@
   <a class="text-sm leading-6 text-gray-700 font-bold py-4 hover:text-orange-400 transition" href="pricing.html">Pricing</a>
   <a class="text-sm leading-6 text-gray-700 font-bold py-4 hover:text-orange-400 transition" href="faq.html">FAQ</a>
   <a class="text-sm leading-6 text-gray-700 font-bold py-4 hover:text-orange-400 transition" href="contact.html">Contact Us</a>
+  <a class="text-sm leading-6 text-gray-700 font-bold py-4 text-orange-400 transition" href="https://app.uzoussd.com/app/login">Log in</a>
+  <a class="text-sm leading-6 text-gray-700 font-bold py-4 text-orange-400 transition" href="https://app.uzoussd.com/app/register">
+    Get Started
+  </a>
 </div>
 
 <script>
@@ -70,7 +74,7 @@
   }
 </script> 
 
-  <!-- ==================== JS for sticky nav & active link ==================== -->
+  <!--  JS for sticky nav & active link  -->
   <script>
     window.addEventListener('scroll',()=>{document.getElementById('main-nav').classList.toggle('navbar-sticky',window.scrollY>50);});
     document.addEventListener('DOMContentLoaded',()=>{
@@ -81,8 +85,23 @@
     });
     
   </script>
+  <script>
+  window.addEventListener('scroll', function() {
+    const menu = document.getElementById('mobile-menu');
+    const scrollY = window.scrollY;
 
-  <!-- ==================== HERO ==================== -->
+    if (scrollY > 50) { // when user scrolls down 50px
+      menu.classList.add('fixed', 'top-0', 'shadow-md');
+      menu.classList.remove('absolute', 'top-20');
+    } else {
+      menu.classList.add('absolute', 'top-20');
+      menu.classList.remove('fixed', 'top-0', 'shadow-md');
+    }
+  });
+</script>
+
+
+  <!--  HERO  -->
   <div class="overflow-hidden py-20 sm:py-32 lg:pb-32 xl:pb-36">
     <div class="mx-auto max-w-7xl px-6 lg:px-8">
       <div class="lg:grid lg:grid-cols-12 lg:gap-x-8 lg:gap-y-8">
